# fast-api-with-test

./: http-client.private.env.json  main.py  pyproject.toml
routers/: graphql_api.py  user_api.py  websocket_api.py
test/: graphql.http  main.http  user.http  ws.http
test/script/: 2xx.js  list.js  single.js
